Fix frontpage display on mobile

--- a/app/assets/stylesheets/frontpage.css.scss
+++ b/app/assets/stylesheets/frontpage.css.scss
@@ -17,6 +17,7 @@ body {
 @media (max-height: 480px) {
   body .frontpage_center {
     margin-top: 30px;
+    font-size: 40px;
   }
 }
 
@@ -80,11 +81,13 @@ body {
   }
 }
 
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+@media (min-height: 480px) {
+  body .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
 }
 
 .footer_container {
